examples/errors/unknown_type.aaa
fn
    foo
args
    bar as baz
{
    nop
}


fn
    main
{
    nop
}
